# code-tree

./: README.md  pyproject.toml
.github/: copilot-instructions.md
artifacts/: code_tree.json
src/code_tree_agent/: __init__.py  artifact.py  cli.py  graph.py  state.py
src/code_tree_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/code_tree_agent/nodes/: artifact_builder.py  dependency_analysis.py  file_analysis.py  file_discovery.py
src/code_tree_agent/utils/: file_parsing.py
ui/: app.py
